# adb-install-cert

./: .bumpversion.toml  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: publish_pypi.yml
adb_install_cert/: __main__.py  utils.py
guide/: README.md  demo-android-14-conscrypt.cast  demo-android-14.cast  demo-cert-gen.cast  demo-prep-cert.cast
