[tool.poetry]
name = "adb-install-cert"
version = "0.2.1"
description = "Install certificates to android system store"
authors = ["sysraccoon <sysraccoon@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
  { include = "adb_install_cert" }
]

[tool.poetry.dependencies]
python = "^3.10"
adbutils = "^2.6.1"
click = "^8.1.7"

[tool.poetry.scripts]
adb-install-cert = "adb_install_cert.__main__:adb_install_cert"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
