[project]
name = "adb-install-cert"
version = "0.2.2"
description = "Install certificates to android system store"
authors = [{ name = "sysraccoon", email = "sysraccoon@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "adbutils>=2.6.1,<3",
    "click>=8.1.7,<9",
]

[project.scripts]
adb-install-cert = "adb_install_cert.__main__:adb_install_cert"

[dependency-groups]
dev = ["bump-my-version>=1.2.0,<2"]

[tool.hatch.build.targets.sdist]
include = ["adb_install_cert"]

[tool.hatch.build.targets.wheel]
include = ["adb_install_cert"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

