[project]
name = "adb-install-cert"
version = "0.2.3-dev0"
description = "Install certificates to android system store"
authors = [{ name = "sysraccoon", email = "sysraccoon@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "adbutils>=2.6.1,<3",
    "click>=8.1.7,<9",
]

[project.scripts]
adb-install-cert = "adb_install_cert.__main__:adb_install_cert"

[dependency-groups]
dev = ["bump-my-version>=1.2.0,<2"]

[tool.hatch.build.targets.sdist]
include = ["adb_install_cert"]

[tool.hatch.build.targets.wheel]
include = ["adb_install_cert"]

[tool.bumpversion]
current_version = "0.2.3-dev0"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -                             # dash separator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
    )?                                # pre-release section is optional
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[tool.bumpversion.parts.pre_l]
values = ["dev", "rc", "final"]
optional_value = "final"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

